@@ -2,4 +2,5 @@
 require File.dirname(__FILE__) + '/test_base'
 
 require 'cabinet_0_test'
+require 'cabinet_1_test'
 
